# minesweeper

./: .env  Cargo.toml
.github/workflows/: build.yml  main.yml
src/: bounds.rs  lib.rs  main.rs
src/bevy/: layout.rs  mod.rs  mouse.rs  structs.rs
src/components/: bomb.rs  bomb_neighber.rs  coordinates.rs  mod.rs  uncover.rs
src/resources/: board.rs  board_asset.rs  board_options.rs  map.rs  mod.rs  tile.rs
src/systems/: event.rs  input.rs  mod.rs  uncover.rs
