[package]
name = "mine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
debug = ["colored"]

[dependencies]
bevy = "0.11"
bevy_render = "0.11"
rand = "0.8.5"
colored = { version = "2.0.4", optional = true}

serde = "1.0.188"